Completed all tasks

--- a/code-along.html
+++ b/code-along.html
@@ -13,7 +13,7 @@
          <!-- Instructions: go through the code and update the tags so the formatting makes sense. -->
         <header>
             <!-- 1. This should be a header! -->
-            <p>The Beauty of Nature</p>
+            <h1>The Beauty of Nature</h1>
         </header>
         <main>
             <section>
@@ -42,6 +42,8 @@
             </section>
         </main>
         <!-- 4. We want more space here - what tag could we add? -->
+      <br>
+    
         <footer>
             <p>Written by ChatGPT</p>
         </footer>
