--- a/code-solo.html
+++ b/code-solo.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- 1. Change the title to My Practice Page or a title you think is better - your pick. -->
-    <title>Code Solo</title>
+    <title>My Practice page</title>
 </head>
 <body>
     <!-- nav bar -->
@@ -14,16 +14,20 @@
 
 
     <!-- 2. Add the biggest header tag and make the content your name. -->
-
+<h1>Dafne Jimenez</h1>
     <!-- 3. Add another header tag, but make it smaller. Make the content say "Bio" (do not include the quotes)-->
-
+<h2>Bio</h2>
     <!-- 4. Add a paragraph tag. For the content, write 6 short sentences about yourself. -->
-
+<p>Hello, Im a christian girl, who goes about her day being clear and honest. I enjoy singing, reading and worshiping God, preaching out his name with my content. My favorite sport to play is volleyball. I have a short term job, working for my mom as an assistant manager. <br>Im going back to take piano lesoons, and kind of build myself up from there.I love watching sunsets, because the blended colors remind me of beautiful painted mural. it reminds me that God is amazing and always marks the end of the day with beautiful art work in the sky. My favorite colort is purple and my favorite flowers, Irises, Gardenias, and Forget-Me-Nots.</p>
     <!-- 5. After the third sentence in your bio, add a break tag. -->
 
     <!-- Challenge: go to this link in your browser: https://www.w3schools.com/tags/ref_byfunc.asp 
         and try adding an unordered list. Include a couple list items of things you like. -->
-
+<ul>
+<li>Irises</li>
+<li>Gardenias</li>
+  <li>Forget-Me-Not</li>
+</ul>
 </body>
 
 
